--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>登录</title>
-</head>
-<body>
-	<h1>快速上新</h1>
-	<h4>输入外网商品URL，自动获取图片和商品简介</h4>
-	<form id="authForm">
-		APPKEY: <input type="text" name="" id="appkey">
-		secret: <input type="password" name="" id="secret">
-		<button type="button" id="auth">验证</button>
-	</form>
-</body>
-<script type="text/javascript" src="client/js/login.js"></script>
+<h1>&nbsp;</h1>
+<h1>快速上新</h1>
+<h4>输入外网商品URL，自动获取图片和商品简介</h4>
+<form id="authForm">
+	APPKEY: <input type="text" name="" id="appkey">
+	secret: <input type="password" name="" id="secret">
+	<button type="button" id="auth">验证</button>
+</form>
+
 <script type="text/javascript" src="client/js/components/util.js"></script>
-</html>
+<script type="text/javascript" src="client/js/login.js"></script>
